Sticker Picker: Fix broken layout (#3638)

--- a/src/components/middle/composer/StickerPicker.module.scss
+++ b/src/components/middle/composer/StickerPicker.module.scss
@@ -2,6 +2,7 @@
 
 .root {
   --color-primary: var(--color-text);
+  --emoji-size: 4.5rem;
 
   height: 100%;
 }
